# Projects

./: .gittignore  README.md
01_classical/: E_particle_interaction.py  kaotik_pendulum.py  laser_focus.py  manifold.py  taylor_exps.py
02_statistical/: binomial_dist.py  central_limit_theorem.py  dist_functions.py  ideal_gas_time_average.py  kaotik_pendulum_statistics.py
02_statistical/ideal_gas_system/: CMakeLists.txt  ensemble_physics.cpp  ideal_gas_ansamble_average.py  ideal_gas_time_average.py  main.py
03_quantum/: H_atom_full_solution.py  Superposition.py  TDPT.py  TDSEvsBarrier.py  adiabatic_inf_well_exp_comp.py  adiabatic_inf_well_expension.py  central_force_field_atom.py  cont_well_app.py  continuos_well.py  doublle slit.py  gaussian_packet.py  hydrogen_atom.py  lattice_wavepacket.py  phase_transition_map_quasistatic.py  quantum_billard.py  stern_gerlach.py  test_max.py
04_pinn/: PINN_finite_well.py  app_pinn.py  kuantum_beyni.pth  train_pinn.py
05_special_projects/: f35_escape.py  sudoku_solver_graph.py  sudoku_solver_graph_pygame.py  track_destroy.py
